# WaveVision-RPi-STM32

./: .gitignore  .mxproject  CMakeLists.txt  WaveVision-STM32.ioc  main-old.cpp
Core/Inc/: audio_engine.h  main.h  stm32f4xx_it.h
Core/Src/: adc.c  audio_engine.c  gpio.c  main.c  stm32f4xx_it.c  tim.c
WaveVision-Desktop/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.h  serialworker.cpp  serialworker.h  waveformwidget.cpp  waveformwidget.h
WaveVision-Desktop/WaveVision-Desktop/: mainwindow.cpp  mainwindow.h
WaveVision-STM32/: .gitignore  .mxproject  CMakeLists.txt  STM32F411XX_FLASH.ld  WaveVision-STM32.ioc
WaveVision-STM32/Core/Inc/: audio_engine.h  main.h  stm32f4xx_it.h
WaveVision-STM32/Core/Src/: adc.c  audio_engine.c  gpio.c  main.c  stm32f4xx_it.c  tim.c
cmake/stm32cubemx/: CMakeLists.txt
